@startuml
class Quiz1Controller {
    - totalAttempts: int
    - currentAttempt: int
    - correctProGamer: ProGamer
    - currentInput: string
    + startGame()
    + validateInput(input: string): bool
    + provideHint(attempt: Attempt): Hint
    + displayHints(attempt: Attempt)
    + checkAttempts()
}

class ProGamer {
    - id: string
    - name: string
    - league: string
    - team: string
    - position: string
    - age: int
    - leagueWins: int
    - intlWins: int
    - image: Image
    + revealImage()
    + blurImage()
}

class Hint {
    - hintType: string
    - hintValue: string
    + generateHint(proGamer: ProGamer, hintType: string): string
}

class Attempt {
    - attemptNumber: int
    - input: string
    - proGamer: ProGamer
    - hints: List<Hint>
    + compareWithCorrect(proGamer: ProGamer): bool
}

Quiz1Controller --> ProGamer : correctProGamer
Quiz1Controller --> Attempt : attempts
Attempt --> ProGamer : proGamer
Attempt --> Hint : hints
ProGamer --> Hint : uses

@enduml
